--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "http://hospitoservice.github.io/hrms",
   "name": "hospitonet-hrms",
   "private": true,
   "version": "0.0.0",
